syntax="proto3";
package greet;
option go_package="greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2; //tag number 2
}

message Summating {
    int64 num1 = 1;
    int64 num2 = 2;
}

message SummationRequest {
    Summating summation = 1;
}

message SummationResponse {
    int64 result = 1;
}

service SummationService {
    rpc Sum(SummationRequest) returns (SummationResponse) {};
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;

}

message GreetManyTimesResponse {
    string result = 1;
}

message GreetLongResponse {
    string result = 1;
}

//RegisterGreetServiceServer
service GreetService{
    //unary api
    rpc Greet(GreetRequest) returns (GreetResponse){};//RPC call
    //stream api
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
    //client stream
    rpc LongGreet(stream GreetRequest) returns (GreetLongResponse){};
}
